# ETL-PDF-Extractor

./: .editorconfig  .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
dbt_models/models/: source.yml
dbt_models/models/bronze/jornada/: bronze_invoice_jornada.sql  bronze_invoice_jornada_small.sql
dbt_models/models/bronze/redrex/: bronze_invoice_redrex.sql  bronze_invoice_redrex_small.sql
dbt_models/models/gold/: gold_invoices.sql
dbt_models/models/silver/jornada/: silver_invoice_jornada.sql
dbt_models/models/silver/redrex/: silver_invoice_redrex.sql
src/: pdf_viz.py  start.py
src/configs/rules/: rules.py
src/configs/tools/: postgres.py
src/files/: start.py
